tests/fixtures/invalid/bytes_div_bool.py
# Cannot divide Bytes and Bool
x: float = b"hello" / True
